update the html files

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -51,6 +51,7 @@
           <div class="quantity">
             <img
               data-product="{{item.product.id}}"
+              data-qty="{{item.available_quantity}}"
               data-action="add"
               class="chg-quantity update-cart"
               src="{% static  'images/arrow-up.png' %}"
