--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -40,9 +40,10 @@
       </div>
 
       <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01">Options</label>
+        <label class="input-group-text" for="inputGroupSelect01"
+          >Account Type</label
+        >
         <select class="form-select" id="inputGroupSelect01" name="acct_type">
-          <option selected>regular</option>
           <option value="business">Bussiness</option>
           <option value="regular">Regular</option>
         </select>
