--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -5,16 +5,22 @@
     <img class="thumbnail" src="{{product.imageURL}}" />
     <div class="box-element product">
       <h6><strong>{{product.name}}</strong></h6>
+      <h6>In stock: {{product.quantity}}</h6>
       <hr />
 
       <button
         data-product="{{product.id}}"
+        data-qty="{{product.quantity}}"
         data-action="add"
         class="btn btn-outline-secondary add-btn update-cart"
       >
         Add to Cart
       </button>
-      <a class="btn btn-outline-success" href="#">View</a>
+      <a
+        class="btn btn-outline-success"
+        href="{% url 'product_desc' product.id %}"
+        >View</a
+      >
       <h4 style="display: inline-block; float: right">
         <strong>${{product.price}}</strong>
       </h4>
