--- a/store/templates/store/product_desc.html
+++ b/store/templates/store/product_desc.html
@@ -4,6 +4,7 @@
     src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp"
     class="card-img-top"
     alt="..."
+    style="height: 300px; width: 300px"
   />
   <div class="card-body">
     <h5 class="card-title">{{product.name}}</h5>
@@ -19,6 +20,12 @@
   >
     Add to Cart
   </button>
+</div>
+<div class="card mb-3">
+  <div class="card-body">
+    <h5 class="card-title">Reviews</h5>
+    <p class="card-text">No reviews yet</p>
+  </div>
 </div>
 
 {% endblock content %}
