readme.md file upload

--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -1,7 +1,7 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
 
 <body>
-  <div class="container mt-5">
+  <div class="container mt-5" style="border-radius: 100px">
     <!-- Registration form -->
     <form
       class="col-6 mx-auto card p-3 shadow-lg"
@@ -106,7 +106,9 @@
       <p>Already have an account <a href="/login/">Login</a></p>
 
       <!-- Submit button -->
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary" style="border-radius: 10px">
+        Submit
+      </button>
     </form>
   </div>
 </body>
