--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -1,6 +1,6 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
 
-<div class="container mt-5">
+<div class="container mt-5" style="border-radius: 10px">
   <!-- Login form -->
   <form
     class="col-6 mx-auto card p-3 shadow-lg"
@@ -56,7 +56,9 @@
     <p>Don't have an account <a href="/register/">Register</a></p>
 
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" style="border-radius: 10px">
+      Submit
+    </button>
   </form>
 </div>
 
