--- a/store/templates/business/mainb.html
+++ b/store/templates/business/mainb.html
@@ -20,6 +20,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/dashboard.css' %}"
+    />
 
     <script type="text/javascript">
       var user = "{{request.user}}";
