--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -143,7 +143,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div style="margin: 2.5%">
       <br />
       {% block content %} {% endblock content %}
     </div>
