--- a/store/templates/business/profile.html
+++ b/store/templates/business/profile.html
@@ -1,65 +1,95 @@
 {% extends 'store/main.html'%} {% load static %} {% block content %}
-
-<section
-  class="w-100 px-4 py-5"
-  style="background-color: #031d0f; border-radius: 0.5rem 0.5rem 0 0"
->
-  <div class="row d-flex justify-content-center">
-    <div class="col col-md-9 col-lg-7 col-xl-6">
-      <div class="card" style="border-radius: 15px">
-        <div class="card-body p-4">
-          <div class="d-flex">
-            <div class="flex-shrink-0">
-              <img
-                src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
-                alt="Generic placeholder image"
-                class="img-fluid"
-                style="width: 180px; border-radius: 10px"
-              />
-            </div>
-            <div class="flex-grow-1 ms-3">
-              <h5 class="mb-1">{{ user.customer.name }}</h5>
-              <p class="mb-2 pb-1">{{ user.username }}</p>
-              <div
-                class="d-flex justify-content-start rounded-3 p-2 mb-2 bg-body-tertiary"
-              >
-                <div>
-                  <p class="small text-muted mb-1">Account Type</p>
-                  <p class="mb-0">{{user.customer.acct_type}}</p>
-                </div>
-                <div class="px-3">
-                  <p class="small text-muted mb-1">Amount spent</p>
-                  <p class="mb-0">976</p>
-                </div>
-                <div>
-                  <p class="small text-muted mb-1">Rating</p>
-                  <p class="mb-0">8.5</p>
-                </div>
+<div>
+  <section
+    class="w-100 px-4 py-5"
+    style="background-color: #031d0f; border-radius: 0.5rem 0.5rem 0 0"
+  >
+    <div class="row d-flex justify-content-center">
+      <div class="col col-md-9 col-lg-7 col-xl-6">
+        <div class="card" style="border-radius: 15px">
+          <div class="card-body p-4">
+            <div class="d-flex">
+              <div class="flex-shrink-0">
+                <img
+                  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
+                  alt="Generic placeholder image"
+                  class="img-fluid"
+                  style="width: 180px; border-radius: 10px"
+                />
               </div>
-              <div class="d-flex pt-1">
-                <button
-                  type="button"
-                  data-mdb-button-init
-                  data-mdb-ripple-init
-                  class="btn btn-outline-primary me-1 flex-grow-1"
+              <div class="flex-grow-1 ms-3">
+                <h5 class="mb-1">{{ user.customer.name }}</h5>
+                <p class="mb-2 pb-1">{{ user.username }}</p>
+                <div
+                  class="d-flex justify-content-start rounded-3 p-2 mb-2 bg-body-tertiary"
                 >
-                  Transactions
-                </button>
-                <button
-                  type="button"
-                  data-mdb-button-init
-                  data-mdb-ripple-init
-                  class="btn btn-primary flex-grow-1"
-                >
-                  Edit Profile
-                </button>
+                  <div>
+                    <p class="small text-muted mb-1">Account Type</p>
+                    <p class="mb-0">{{user.customer.acct_type|capfirst}}</p>
+                  </div>
+                  <div class="px-3">
+                    <p class="small text-muted mb-1">Amount spent</p>
+                    <p class="mb-0">976</p>
+                  </div>
+                  <div>
+                    <p class="small text-muted mb-1">Rating</p>
+                    <p class="mb-0">8.5</p>
+                  </div>
+                </div>
+                <div class="d-flex pt-1">
+                  <button
+                    type="button"
+                    data-mdb-button-init
+                    data-mdb-ripple-init
+                    class="btn btn-primary flex-grow-1"
+                  >
+                    Edit Profile
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </section>
+  <div class="mt-5">
+    <h5>Recent Orders</h5>
+    <hr />
+    <div class="card">
+      <table class="table table-dark table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Date</th>
+            <th scope="col">Transaction id</th>
+            <th scope="col">Completed</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        {% for item in orders %}
+        <tbody>
+          <tr>
+            <td>{{ item.date_ordered|date:"M d, h:i A" }}</td>
+            <td>{{ item.transaction_id|slice:":6" }}...</td>
+            <td>{{item.complete}}</td>
+            <td>${{ item.get_cart_total }}</td>
+            <td>
+              <a
+                class="btn btn-primary add-btn view-items"
+                type="button"
+                data-id="{{ item.id }}"
+                href="{% url 'view_order' item.id%}"
+              >
+                View Items
+              </a>
+            </td>
+          </tr>
+        </tbody>
+        {% endfor %}
+      </table>
+    </div>
   </div>
-</section>
+</div>
 
+<!-- <script type="text/javascript" src="{% static 'js/update.js' %}"></script> -->
 {% endblock content %}
