--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -136,7 +136,7 @@
           ],
         });
       },
-
+      //TODO: Check the product availability once more before completing the transaction
       // Finalize the transaction
       onApprove: function (data, actions) {
         return actions.order.capture().then(function (details) {
