--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -110,6 +110,21 @@
             >
           </li>
           {% endif %}
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Chats <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Wishlist <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Notification <span class="sr-only">(current)</span></a
+            >
+          </li>
         </ul>
         <div class="form-inline my-2 my-lg-0">
           {% if user.customer.acct_type == 'business' %}
