--- a/store/templates/store/product_desc.html
+++ b/store/templates/store/product_desc.html
@@ -1,12 +1,12 @@
 {% extends 'store/main.html'%} {% load static %} {% block content %}
 <div class="card mb-3">
   <div style="display: flex; justify-content: space-evenly">
-    <div>
+    <div style="max-width: 50%">
       <img
         src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp"
         class="card-img-top"
         alt="..."
-        style="height: 300px; width: 300px"
+        style="height: 300px; max-width: 300px"
       />
     </div>
     <div style="max-width: 50%">
