--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -53,10 +53,17 @@
       </div>
     </nav>
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="row product-row" style="flex: 1">
+      <!-- <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4"></div> -->
+      <div class="row row-cols-2 row-cols-md-3 product-row" style="flex: 1">
         {% for product in products %}
-        <div class="col-lg-3 col-md-6">
-          <img class="thumbnail" src="{{product.imageURL}}" />
+
+        <div class="col-lg-3 col-md-6 my-2">
+          <a href="{% url 'product_desc' product.id %}">
+            <img
+              class="thumbnail"
+              src="{{product.imageURL}}"
+              href="{% url 'product_desc' product.id %}"
+          /></a>
           <div class="box-element product">
             <h6><strong>{{product.name}}</strong></h6>
             <div style="display: flex; justify-content: space-between">
@@ -64,20 +71,15 @@
               <h6>{{product.get_rating}}</h6>
             </div>
             <hr />
-
-            <button
+            <a
               data-product="{{product.id}}"
               data-qty="{{product.quantity}}"
               data-action="add"
-              class="btn btn-outline-secondary add-btn update-cart"
+              class="btn add-btn update-cart"
             >
-              Add to Cart
-            </button>
-            <a
-              class="btn btn-outline-success"
-              href="{% url 'product_desc' product.id %}"
-              >View</a
-            >
+              <img id="cart-icon" src="{% static 'images/add-to-cart.png' %}" />
+            </a>
+
             <h6 style="display: inline-block; float: right">
               <strong>${{product.price}}</strong>
             </h6>
@@ -122,34 +124,30 @@
             console.log(data);
             data.products.forEach((product) => {
               const productDiv = document.createElement("div");
-              productDiv.className = "col-lg-3 col-md-6";
+              productDiv.className = "col-lg-3 col-md-6 my-2";
               productDiv.innerHTML = `
-              <img class="thumbnail" src="${product.imageURL}" />
-          <div class="box-element product">
-            <h6><strong>${product.name}</strong></h6>
-            <div style="display: flex; justify-content: space-between">
-              <h6>In stock: ${product.quantity}</h6>
-              <h6>${product.rating}</h6>
-            </div>
-            <hr />
-
-            <a
-              data-product="${product.id}"
-              data-qty="${product.quantity}"
-              data-action="add"
-              class="btn btn-outline-secondary add-btn update-cart"
-            >
-              Add to Cart
-            </a>
-            <a
-              class="btn btn-outline-success"
-              href="/product_desc/${product.id}"
-              >View</a
-            >
-            <h6 style="display: inline-block; float: right">
-              <strong>$${product.price}</strong>
-            </h6>
-          </div>`;
+              <a href="/product_desc/${product.id}">
+                <img class="thumbnail" src="images/${product.image}" />
+              </a>
+              <div class="box-element product">
+                  <h6><strong>${product.name}</strong></h6>
+                  <div style="display: flex; justify-content: space-between">
+                    <h6>In stock: ${product.quantity}</h6>
+                    <h6>${product.rating}</h6>
+                  </div>
+                  <hr />
+                <a
+                  data-product="${product.id}"
+                  data-qty="${product.quantity}"
+                  data-action="add"
+                  class=" btn add-btn update-cart"
+                >
+                  <img id="cart-icon" src="{% static 'images/add-to-cart.png' %}" />
+                </a>
+                <h6 style="display: inline-block; float: right">
+                  <strong>$${product.price}</strong>
+                </h6>
+              </div>`;
               productList.appendChild(productDiv);
             });
             console.log(data);
