--- a/store/templates/business/dashboard.html
+++ b/store/templates/business/dashboard.html
@@ -68,7 +68,7 @@
             {% for product in products %}
             <div class="col mb-2">
               <img
-                src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp"
+                src="{{product.imageURL}}"
                 alt="image 1"
                 class="w-100 rounded-3"
               />
