--- a/store/templates/business/mainb.html
+++ b/store/templates/business/mainb.html
@@ -121,7 +121,7 @@
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="{% url 'wishlist' %}"
               >Wishlist <span class="sr-only">(current)</span></a
             >
           </li>
