--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -19,6 +19,11 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 
     <script type="text/javascript">
@@ -116,7 +121,7 @@
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="{% url 'wishlist' %}"
               >Wishlist <span class="sr-only">(current)</span></a
             >
           </li>
