--- a/store/templates/store/product_desc.html
+++ b/store/templates/store/product_desc.html
@@ -1,9 +1,13 @@
 {% extends 'store/main.html'%} {% load static %} {% block content %}
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=store"
+/>
 <div class="card mb-3">
   <div style="display: flex; justify-content: space-evenly">
     <div style="max-width: 50%">
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp"
+        src="{{product.imageURL}}"
         class="card-img-top"
         alt="..."
         style="height: 300px; max-width: 300px"
@@ -21,19 +25,21 @@
     <p class="card-text">In stock: {{ product.quantity }}</p>
   </div>
   <div style="display: flex; justify-content: space-between">
-    <button
+    <a
       data-product="{{product.id}}"
       data-qty="{{product.quantity}}"
       data-action="add"
-      class="btn btn-outline-secondary add-btn col-md-6 update-cart"
+      class="btn add-btn update-cart"
     >
-      Add to Cart
-    </button>
+      <img id="cart-icon" src="{% static 'images/add-to-cart.png' %}" />
+    </a>
     <a
       class="btn btn-dark add-btn col-md-6"
       href="{% url 'business_profile' product.owner.id %}"
     >
-      View {{product.owner.name}}
+      <span class="material-symbols-outlined"> store </span>
+
+      {{product.owner.name}}
     </a>
   </div>
 </div>
